[FIX] up social network icons to work differently on mobile (at the bottom) versus on desktop and tablet (at the top right). CSS work, random fixups in the grammar

--- a/javascript/css/style-1000px.css
+++ b/javascript/css/style-1000px.css
@@ -149,3 +149,10 @@
 		    max-width:100%;
     		height: auto;
 		}
+
+/* Footer */
+
+		#footer ul
+		{
+			display: none;
+		}
