--- a/javascript/css/style-desktop.css
+++ b/javascript/css/style-desktop.css
@@ -5,7 +5,7 @@
 */
 
 /*********************************************************************************/
-/* Desktop (>= 480px)                                                            */
+/* Desktop (>= 1200px)                                                           */
 /*********************************************************************************/
 
 /* Basic */
@@ -233,6 +233,11 @@
 		{
 			color: #546b76;
 		}
+		
+		#footer ul
+		{
+			display: none;
+		}	
 
 /* Copyright */
 
